--- a/styles/stylepagpr.css
+++ b/styles/stylepagpr.css
@@ -2,6 +2,14 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
+    background-color:var(--color-fondo);
+    color:var(--color-fuente) 
+}
+
+header {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 
 footer {
@@ -17,8 +25,9 @@ footer {
 /*Barra de navegación (negro)*/
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin-right: 10%;
+    margin-left: 10%;
+    padding: 0px;
     overflow: hidden;
     background-color: #333;
 }
@@ -39,5 +48,75 @@ li a:hover {
     background-color: #111;
 }
 
-/*Botón de encendido o apagado*/
+/*Boton cambiar de color de fondo*/
 
+:root {
+    --color-fuente: #ffffff;
+    --color-fondo: #000;
+}
+
+[tema="blue"]{
+    --color-fuente: rgb(255, 255, 255);
+    --color-fondo: rgb(72, 38, 224);
+}
+
+#switch {
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    width: 60px;
+    height: 34px;
+
+  }
+  
+  #switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:var(--color-fuente);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color:var(--color-fondo);
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: var(--color-fuente);
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px var(--color-fuente);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
